# aws-log-parser

./: .coveragerc  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  bootstrap.sh  pyproject.toml  pyrightconfiguration.json  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml  workflow.yml
aws_log_parser/: __init__.py  cli.py  exceptions.py  fields.py  interface.py  io.py  models.py  parser.py  plugin.py  util.py
aws_log_parser/aws/: __init__.py  client.py  ec2.py  plugin.py  s3.py
aws_log_parser/cli/: aws.py  ec2.py  main.py  s3.py
aws_log_parser/plugin/: __init__.py  base.py  runner.py
docs/: api.rst  conf.py  index.rst
examples/: count-hosts-gzip-alb.py  count-hosts.py
plugins/: dns_resolver.py  instance_id.py  instance_name.py  radb.py  user_agent.py
requirements/: all.txt  base.txt  cli.txt  dev.txt  install.txt  test.txt
test/: conftest.py  test_fields.py  test_interface.py  test_io.py  test_parse.py  test_parse_cloudfront.py  test_parse_loadbalancer.py  test_parse_waf.py
test/data/: alb-h2.csv  classic_loadbalancer_http_entry.csv  cloudfront-entry.csv  cloudfront_entry.csv  cloudfront_entry2.csv  cloudfront_entry_broken_cookie.csv  cloudfront_entry_cookie_with_encoding.csv  loadbalancer_cloudfront_forward.csv  loadbalancer_cloudfront_forward_h2.csv  loadbalancer_cloudfront_forward_refused.csv  loadbalancer_http2_entry.csv  loadbalancer_http2_entry_auth_error.csv  loadbalancer_http2_entry_auth_missing.csv  loadbalancer_http_entry.csv  loadbalancer_https_entry.csv  loadbalancer_lambda_entry.csv  loadbalancer_lambda_failed_entry.csv  loadbalancer_secured_websockets_entry.csv  loadbalancer_websockets_entry.csv  waf_log.json
