[tool.poetry]
name = "aws-log-parser"
version = "3.0.0"
description = "Parse AWS CloudFront and LoadBalancer logs into Python dataclasses."
authors = ["Derrick Petzold <github@petzold.io>"]
license = "Apache"
readme = "README.md"
packages = [{include = "aws_log_parser"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
    "aws_log_parser",
    "test",
]

exclude = [
    "**/__pycache__",
    "**/.eggs"
]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"
