[tool.poetry]
name = "aws-log-parser"
version = "3.0.1"
description = "Parse AWS CloudFront and LoadBalancer logs into Python dataclasses."
authors = ["Derrick Petzold <github@petzold.io>"]
license = "Apache"
readme = "README.md"
packages = [{include = "aws_log_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.88"
dataclasses-json = "^0.6.7"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
pytest-socket = "^0.7.0"
pytest-datadir = "^1.5.0"
pyright = "^1.1.391"
ruff = "^0.8.4"
pytest = "^8.3.4"
tox = "^4.23.2"
twine = "^6.0.1"


[tool.poetry.group.cli.dependencies]
rich = "^13.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
    "aws_log_parser",
    "test",
]

exclude = [
    "**/__pycache__",
    "**/.eggs"
]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"
